--- a/app/src/main/res/values/strings_atv_login.xml
+++ b/app/src/main/res/values/strings_atv_login.xml
@@ -1,14 +1,14 @@
 <resources>
 
     <!-- Strings relacionadas `a AtvLogin -->
-    <string name="titulo_atv_login">GPA Engenharia - Projetos</string>
-    <string name="hint_email">Usuário</string>
-    <string name="hint_senha">Senha</string>
-    <string name="texto_entrar">Entrar</string>
-    <string name="texto_entrar_curto">Entrar</string>
+    <string name="titulo_atv_login">Projects Manager</string>
+    <string name="hint_email">User</string>
+    <string name="hint_senha">Password</string>
+    <string name="texto_entrar">Login</string>
+    <string name="texto_entrar_curto">Login</string>
 
-    <string name="erro_email_invalido">Usuário inválido</string>
-    <string name="erro_senha_invalida">Senha muito curta</string>
-    <string name="erro_senha_incorreta">Senha incorreta</string>
-    <string name="erro_campo_requerido">Este campo é requerido</string>
+    <string name="erro_email_invalido">Invalid user</string>
+    <string name="erro_senha_invalida">short password</string>
+    <string name="erro_senha_incorreta">wrong password</string>
+    <string name="erro_campo_requerido">required field</string>
 </resources>
