--- a/app/src/main/res/values/strings_atv_projeto.xml
+++ b/app/src/main/res/values/strings_atv_projeto.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="titulo_atv_projeto">" "</string>
-    <string name="hint_edt_projeto">nome do projeto</string>
-    <string name="hint_edt_descricaoprojeto">descrição do projeto</string>
+    <string name="hint_edt_projeto">project name</string>
+    <string name="hint_edt_descricaoprojeto">project description</string>
 </resources>
