--- a/app/src/main/res/values/strings_atv_usuario.xml
+++ b/app/src/main/res/values/strings_atv_usuario.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="titulo_atv_usuarios">" "</string>
-    <string name="descricao">aqui aparecerão as opções de administração de usuários e equipes</string>
+    <string name="descricao">not implemented yet</string>
 </resources>
